# srt

./: .gitignore  CMakeLists.txt  README.md
example/: basic_raytracer.cpp  cornell_box.cpp  parse_scene.hpp  raytracer.hpp  scene_builder.hpp  standard_scene.cpp
files/: BVH_scene.ppm  Cornell_Box.ppm  cornell_box.ppm  image_test.ppm  my_random_scene.ppm  result.ppm
files/scenes/: test.json
source/configuration_files/: paths.h.in
source/includes/: Raytracer.h  paths.h  srt.h
source/includes/ds/: BVH.hpp  Octree.cpp  Octree.hpp  Scene.hpp
source/includes/geometry/: AABB.hpp  Matrix4.hpp  Ray.hpp  Vector4.hpp
source/includes/geometry/hitables/: AABox.hpp  AARectangle.hpp  Hitable.hpp  Instance.hpp  Sphere.hpp
source/includes/rendering/: Camera.hpp  Color.hpp  Material.hpp  Texture.hpp
source/includes/utility/: FileManager.hpp  Randomizer.hpp  Stopwatch.hpp
source/src/: Raytracer.cpp
source/src/ds/: BVH.cpp  Scene.cpp
source/src/geometry/: AABB.cpp  Vector4.cpp
source/src/geometry/hitables/: AABox.cpp  AARectangle.cpp  Hitable.cpp  Instance.cpp  Sphere.cpp
source/src/rendering/: Camera.cpp  Material.cpp  Texture.cpp
source/src/utility/: FileManager.cpp  Randomizer.cpp  Stopwatch.cpp
src/configuration_files/: paths.h.in
src/srt/: Camera.cpp  Camera.hpp  Hitable.cpp  Hitable.hpp  Ray.cpp  Ray.hpp  Scene.cpp  Scene.hpp  srt.cpp  srt.h  structs.h
src/srt/ds/: BVH.cpp  BVH.hpp
src/srt/geometry/: AABB.cpp  AABB.hpp  Mat3.cpp  Mat3.hpp  Plane.cpp  Plane.hpp  Vec3.cpp  Vec3.hpp
src/srt/geometry/instances/: Rotation.cpp  Rotation.hpp  Translation.cpp  Translation.hpp
src/srt/geometry/shapes/: AABox.cpp  AABox.hpp  AARectangle.cpp  AARectangle.hpp  MovingSphere.cpp  MovingSphere.hpp  Sphere.cpp  Sphere.hpp
src/srt/materials/: Dielectric.cpp  Dielectric.hpp  Lambertian.cpp  Lambertian.hpp  Material.hpp  Metal.cpp  Metal.hpp
src/srt/materials/lights/: DiffuseLight.cpp  DiffuseLight.hpp
src/srt/textures/: CheckerTexture.cpp  CheckerTexture.hpp  ImageTexture.cpp  ImageTexture.hpp  StaticTexture.cpp  StaticTexture.hpp  Texture.hpp
src/srt/utility/: FileManager.cpp  FileManager.hpp  Randomizer.cpp  Randomizer.hpp  Stopwatch.cpp  Stopwatch.hpp
